fix overflow for modal content

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -28,6 +28,8 @@ input:checked+.modal.toggled {
     margin: $std-space;
     padding: $std-space;
     background-color: $color-page;
+    max-height: 80vh;
+    overflow-y: auto;
 
     h2 {
         margin: 0;
